--- a/requirements.txt
+++ b/requirements.txt
@@ -7,5 +7,5 @@ streamlit==1.38.0                # Interface Web
 fpdf2==2.8.1                     # Manipulação de PDFs
 python-docx==0.8.11              # Geração de arquivos Word
 pysqlite3-binary                 # Banco de dados SQLite
-langchain==0.2.20                # Compatível com crewai 0.61.0 (>=0.2.16,<0.3.0)
-pydantic==2.4.2                  # Compatível com crewai 0.61.0 (>=2.4.2,<3.0.0)
+langchain==0.2.16                # Versão estável compatível com crewai (>=0.2.16,<0.3.0)
+pydantic==2.6.1                  # Satisfaz pydantic>=2.6.1,<3.0.0 do crewai-tools
