langchain 0.2.9 sem pydantic

--- a/requirements.txt
+++ b/requirements.txt
@@ -7,4 +7,4 @@ streamlit==1.38.0                # Interface Web
 fpdf2==2.8.1                     # Manipulação de PDFs (se necessário)
 python-docx==0.8.11              # Geração de arquivos Word
 pysqlite3-binary
-langchain-openai
+langchain-openai==0.2.9
