--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,20 @@
 crewai==0.61.0                   # Orquestra agentes e tarefas
-crewai-tools==0.8.3             # Ferramentas adicionais para CrewAI
+crewai-tools==0.8.3              # Ferramentas adicionais para CrewAI
 python-dotenv==1.0.1             # Carregar variáveis de ambiente do .env
-openai==1.54.0                   # API para LLMs da OpenAI (se necessário)
-requests==2.32.3                 # Chamadas HTTP (caso precise)
+openai==1.54.0                   # API para LLMs da OpenAI
+requests==2.32.3                 # Chamadas HTTP
 streamlit==1.38.0                # Interface Web
-fpdf2==2.8.1                     # Manipulação de PDFs (se necessário)
+fpdf2==2.8.1                     # Manipulação de PDFs
 python-docx==0.8.11              # Geração de arquivos Word
-pysqlite3-binary
+langchain==0.0.212               # Ferramentas adicionais para integração com LLMs
+pandas==2.1.2                    # Manipulação de dados tabulares
+numpy==1.26.0                    # Suporte matemático e computação
+beautifulsoup4==4.13.0           # Parser para scraping de websites
+lxml==4.9.3                      # Biblioteca XML e HTML (suporte para BeautifulSoup)
+protobuf==3.20.3                 # Compatibilidade com Streamlit
+tenacity==8.2.3                  # Requisitos de resiliência para OpenAI API
+
+
+
+
 
