--- a/requirements.txt
+++ b/requirements.txt
@@ -13,7 +13,7 @@ beautifulsoup4==4.13.0           # Parser para scraping de websites
 lxml==4.9.3                      # Biblioteca XML e HTML (suporte para BeautifulSoup)
 protobuf==3.20.3                 # Compatibilidade com Streamlit
 tenacity==8.2.3                  # Requisitos de resiliência para OpenAI API
-
+pydantic==1.10.12
 
 
 
